Fixed JIRA CMSC-1043 forcing space for table cell because IE does see width of <a tag always as a suggestion. (was wrong width)
git-svn-id: https://scm.mmbase.org/mmbase/trunk@30155 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/CMSContainer/cmsc/edit-webapp/src/webapp/editors/editwizards_new/style/extra/wizard.css
+++ b/contributions/CMSContainer/cmsc/edit-webapp/src/webapp/editors/editwizards_new/style/extra/wizard.css
@@ -460,7 +460,7 @@ td.itembutton {
     padding: 0px;
     vertical-align: top;
     text-align: left;
-    width: 59px;
+    width: 57px;
 }
 span
 {
